[gd_scene load_steps=6 format=2]

[ext_resource path="res://space-wolves/PlayerShip.gd" type="Script" id=1]
[ext_resource path="res://assets/cc_unitLeo.png" type="Texture" id=2]

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0.111801, 0.950311 )
colors = PoolColorArray( 0.969727, 0.212128, 0.212128, 1, 0.995252, 0.99707, 0.0662117, 1 )

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="CircleShape2D" id=3]
radius = 48.0416

[node name="PlayerShip" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 3
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="Particles2D" type="CPUParticles2D" parent="Sprite"]
position = Vector2( 0, 244 )
scale = Vector2( 4, 4 )
emitting = false
amount = 60
lifetime = 1.75
randomness = 0.5
lifetime_randomness = 0.4
local_coords = false
emission_shape = 1
emission_sphere_radius = 5.0
color = Color( 0.952941, 0.898039, 0.345098, 1 )
color_ramp = SubResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 2, 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 2 )

[node name="CaptureArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 56

[node name="CollisionShape2D" type="CollisionShape2D" parent="CaptureArea"]
shape = SubResource( 3 )

[connection signal="body_entered" from="CaptureArea" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="CaptureArea" to="." method="_on_CaptureArea_body_exited"]
